--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
       <!-- BANNER -->
       <div class="name-banner" aria-label="Name banner">
         <div class="marquee">
-          <span>AGNIESZKA KIELTYKA ★ </span>
-          <span>AGNIESZKA KIELTYKA ★ </span>
-          <span>AGNIESZKA KIELTYKA ★ </span>
-          <span>AGNIESZKA KIELTYKA ★ </span>
-          <span>AGNIESZKA KIELTYKA ★ </span>
-          <span>AGNIESZKA KIELTYKA ★ </span>
-          <span>AGNIESZKA KIELTYKA ★ </span>
-          <span>AGNIESZKA KIELTYKA ★ </span>
+          <span>AGNIESZKA KIELTYKA <span class="banner-star">★</span></span>
+          <span>AGNIESZKA KIELTYKA <span class="banner-star">★</span></span>
+          <span>AGNIESZKA KIELTYKA <span class="banner-star">★</span></span>
+          <span>AGNIESZKA KIELTYKA <span class="banner-star">★</span></span>
+          <span>AGNIESZKA KIELTYKA <span class="banner-star">★</span></span>
+          <span>AGNIESZKA KIELTYKA <span class="banner-star">★</span></span>
+          <span>AGNIESZKA KIELTYKA <span class="banner-star">★</span></span>
+          <span>AGNIESZKA KIELTYKA <span class="banner-star">★</span></span>
         </div>
       </div>
     </header>
