--- a/about.html
+++ b/about.html
@@ -5,26 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Me</title>
 
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="layout.css" />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&family=Anton&family=Bruno+Ace+SC&family=Staatliches&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="css/layout.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
-    <header class="nav-bar">
-      <a class="logo" href="index.html" aria-label="Go to home">
-        <img src="imgs/logo.svg" alt="AK logo" />
-      </a>
+    <header class="site-header">
+      <div class="nav-bar">
+        <a class="logo" href="index.html" aria-label="Home">
+          <img src="imgs/logo.svg" alt="AAK logo" />
+        </a>
 
-      <nav class="nav-links" aria-label="Primary navigation">
-        <a href="portfolio.html">PORTFOLIO</a>
-        <a href="about.html">ABOUT</a>
-      </nav>
+        <button class="burger" aria-label="Open menu" aria-expanded="false"><span></span><span></span><span></span></button>
 
-      <button class="burger" aria-label="Open menu" aria-expanded="false"><span></span><span></span><span></span></button>
+        <nav class="nav-links" aria-label="Primary navigation">
+          <a href="portfolio.html">PORTFOLIO</a>
+          <a href="about.html">ABOUT ME</a>
+        </nav>
+      </div>
     </header>
 
     <main>
