--- a/about.html
+++ b/about.html
@@ -38,6 +38,24 @@
           <span class="star">✶</span>
         </div>
       </section>
+      <section class="about-profile">
+        <div class="about-profile__content">
+          <h2 class="about-profile__name">Agnieszka Aleksandra Kieltyka</h2>
+
+          <p class="about-profile__subtitle">Multimediadesign student at Erhvervsakademi København (EK)</p>
+
+          <div class="about-profile__divider"></div>
+
+          <p class="about-profile__text">
+            I am a multimediadesign student from Iceland with a strong interest in visual and creative design. Prior to this education, I studied digital fashion design through an online university course, as well as design and marketing in
+            gymnasium, which provided me with a solid creative foundation and motivation to continue working within design. Creativity has always been a central part of my interests.
+          </p>
+        </div>
+
+        <div class="about-profile__image">
+          <img src="imgs/abt.png" alt="Portrait of Agnieszka Kieltyka" />
+        </div>
+      </section>
     </main>
 
     <script src="main.js"></script>
