--- a/about.html
+++ b/about.html
@@ -55,6 +55,31 @@
         <div class="about-profile__image">
           <img src="imgs/abt.png" alt="Portrait of Agnieszka Kieltyka" />
         </div>
+        <div class="scroll-hint" aria-hidden="true">↓</div>
+      </section>
+      <section class="about-reflection" aria-label="Semester reflection">
+        <div class="about-reflection__inner">
+          <div class="hero-strip about-reflection__strip">
+            <span class="star">✶</span>
+            <h2 class="about-reflection__title">REFLECTION</h2>
+            <span class="star">✶</span>
+          </div>
+
+          <div class="about-reflection__card">
+            <p>
+              During my first semester, I worked primarily on individual projects, with a larger group project towards the end of the semester. After an initial introduction to video production, the focus quickly shifted to web development, where I
+              began working with basic HTML and CSS before moving on to UX/UI principles. Throughout the semester, I worked with user-centered design methods such as user types, user stories, digital prototyping, and user testing, including
+              think-aloud tests, five-second tests, and Likert tests. I also gained experience using GitHub Pages, Lighthouse testing, vector graphics, and basic animations. While coding is still an area I am developing, I especially enjoyed the
+              design process and working with visual concepts, layout, visual hierarchy, and typography.
+            </p>
+
+            <p>
+              When approaching design tasks, I focus on creating clear and visually engaging solutions that balance aesthetics with usability. I enjoy working conceptually and refining my designs through multiple stages, using research and user
+              feedback to inform design decisions. While I am still developing my technical skills in coding, I am motivated to continue learning and refining my workflow in order to create more cohesive and functional digital experiences. This
+              portfolio reflects my learning process and the skills I have developed throughout the first semester.
+            </p>
+          </div>
+        </div>
       </section>
     </main>
 
