--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
         <div class="about-reflection__inner">
           <div class="hero-strip about-reflection__strip">
             <span class="star">✶</span>
-            <h2 class="about-reflection__title">REFLECTION</h2>
+            <h2 class="about-reflection__title">Reflection</h2>
             <span class="star">✶</span>
           </div>
 
