--- a/about.html
+++ b/about.html
@@ -84,5 +84,12 @@
     </main>
 
     <script src="js/main.js"></script>
+    <footer class="site-footer">
+      <p class="site-footer__name">Agnieszka Kieltyka</p>
+      <p class="site-footer__contact">
+        Contact:
+        <a href="mailto:your@email.com">aggaz2004@gmail.com</a>
+      </p>
+    </footer>
   </body>
 </html>
