--- a/portfolio.html
+++ b/portfolio.html
@@ -46,10 +46,7 @@
           <!-- Project 1 -->
           <article class="project-card">
             <div class="project-card__preview" aria-label="Project preview">
-              <div class="project-card__placeholder">Preview image</div>
-              <!-- Later:
-        <img class="project-card__img" src="imgs/project01-01.jpg" alt="Preview of Project 01" />
-        -->
+              <img class="project-card__img" src="imgs/mobilsite-pre.png" alt="" />
             </div>
 
             <div class="project-card__content">
@@ -63,8 +60,7 @@
           <!-- Project 2 -->
           <article class="project-card">
             <div class="project-card__preview" aria-label="Project preview">
-              <div class="project-card__placeholder">Preview image</div>
-              <!-- <img class="project-card__img" src="imgs/project02-01.jpg" alt="Preview of Project 02" /> -->
+              <img class="project-card__img" src="imgs/emnesite-pre.png" alt="" />
             </div>
 
             <div class="project-card__content">
@@ -78,8 +74,7 @@
           <!-- Project 3 -->
           <article class="project-card">
             <div class="project-card__preview" aria-label="Project preview">
-              <div class="project-card__placeholder">Preview image</div>
-              <!-- <img class="project-card__img" src="imgs/project03-01.jpg" alt="Preview of Project 03" /> -->
+              <img class="project-card__img" src="imgs/emnesite-pre.png" alt="" />
             </div>
 
             <div class="project-card__content">
@@ -93,8 +88,7 @@
           <!-- Project 4 -->
           <article class="project-card">
             <div class="project-card__preview" aria-label="Project preview">
-              <div class="project-card__placeholder">Preview image</div>
-              <!-- <img class="project-card__img" src="imgs/project04-01.jpg" alt="Preview of Project 04" /> -->
+              <img class="project-card__img" src="imgs/emnesite-pre.png" alt="" />
             </div>
 
             <div class="project-card__content">
