--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,17 +7,19 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&family=Anton&family=Bruno+Ace+SC&family=Inter:wght@400;500;600&family=Staatliches&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Amarante&family=Anton&family=Bruno+Ace+SC&family=Inter:wght@400;500&family=Staatliches&family=Tiny5&display=swap" rel="stylesheet" />
 
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/layout.css" />
+    <link rel="stylesheet" href="css/components.css" />
+    <link rel="stylesheet" href="css/pages.css" />
   </head>
 
   <body>
     <header class="site-header">
       <div class="nav-bar">
         <a class="logo" href="index.html" aria-label="Home">
-          <img src="imgs/logo.svg" alt="AAK logo" />
+          <img src="imgs/AAK.svg" alt="AAK logo" />
         </a>
 
         <button class="burger" aria-label="Open menu" aria-expanded="false"><span></span><span></span><span></span></button>
