--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,37 +7,43 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&family=Anton&family=Bruno+Ace+SC&family=Staatliches&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="css/layout.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Amarante&family=Anton&family=Bruno+Ace+SC&family=Inter:wght@400;500&family=Staatliches&family=Tiny5&display=swap" rel="stylesheet" />
+
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/layout.css" />
+    <link rel="stylesheet" href="css/components.css" />
+    <link rel="stylesheet" href="css/pages.css" />
   </head>
 
   <body>
     <header class="site-header">
       <div class="nav-bar">
         <a class="logo" href="index.html" aria-label="Home">
-          <img src="imgs/logo.svg" alt="AAK logo" />
+          <img src="imgs/AAK.svg" alt="AAK logo" />
         </a>
 
         <button class="burger" aria-label="Open menu" aria-expanded="false"><span></span><span></span><span></span></button>
 
         <nav class="nav-links" aria-label="Primary navigation">
           <a href="portfolio.html">PORTFOLIO</a>
-          <a href="about.html">ABOUT ME</a>
+          <a href="about.html" aria-current="page">ABOUT ME</a>
         </nav>
       </div>
     </header>
 
-    <main>
+    <main class="page">
+      <!-- ABOUT HERO -->
       <section class="about-hero" aria-label="About hero">
         <img class="about-hero__bg" src="imgs/abhero.png" alt="" aria-hidden="true" />
 
-        <div class="hero-strip hero-strip--about">
-          <span class="star">✶</span>
+        <div class="about-hero__strip" aria-hidden="true">
+          <img class="about-hero__star" src="imgs/star.svg" alt="" />
           <h1 class="about-hero__title">ABOUT ME</h1>
-          <span class="star">✶</span>
+          <img class="about-hero__star" src="imgs/star.svg" alt="" />
         </div>
       </section>
+
+      <!-- ABOUT PROFILE -->
       <section class="about-profile">
         <div class="about-profile__content">
           <h2 class="about-profile__name">Agnieszka Aleksandra Kieltyka</h2>
@@ -56,12 +62,14 @@
           <img src="imgs/abt.png" alt="Portrait of Agnieszka Kieltyka" />
         </div>
       </section>
+
+      <!-- REFLECTION -->
       <section class="about-reflection" aria-label="Semester reflection">
         <div class="about-reflection__inner">
-          <div class="hero-strip about-reflection__strip">
-            <span class="star">✶</span>
+          <div class="about-reflection__strip" aria-hidden="true">
+            <img class="about-reflection__star" src="imgs/star.svg" alt="" />
             <h2 class="about-reflection__title">Reflection</h2>
-            <span class="star">✶</span>
+            <img class="about-reflection__star" src="imgs/star.svg" alt="" />
           </div>
 
           <div class="about-reflection__card">
@@ -83,11 +91,12 @@
     </main>
 
     <script src="js/main.js"></script>
+
     <footer class="site-footer">
       <p class="site-footer__name">Agnieszka Kieltyka</p>
       <p class="site-footer__contact">
         Contact:
-        <a href="mailto:your@email.com">aggaz2004@gmail.com</a>
+        <a href="mailto:aggaz2004@gmail.com">aggaz2004@gmail.com</a>
       </p>
     </footer>
   </body>
