--- a/about.html
+++ b/about.html
@@ -44,22 +44,24 @@
       </section>
 
       <!-- ABOUT PROFILE -->
-      <section class="about-profile">
-        <div class="about-profile__content">
-          <h2 class="about-profile__name">Agnieszka Aleksandra Kieltyka</h2>
+      <section class="about-profile" aria-label="About profile">
+        <div class="about-profile__card">
+          <div class="about-profile__content">
+            <h2 class="about-profile__name">Agnieszka Aleksandra Kieltyka</h2>
 
-          <p class="about-profile__subtitle">Multimediadesign student at Erhvervsakademi København (EK)</p>
+            <p class="about-profile__subtitle">Multimediadesign student at Erhvervsakademi København (EK)</p>
 
-          <div class="about-profile__divider"></div>
+            <div class="about-profile__divider" aria-hidden="true"></div>
 
-          <p class="about-profile__text">
-            I am a multimediadesign student from Iceland with a strong interest in visual and creative design. Prior to this education, I studied digital fashion design through an online university course, as well as design and marketing in
-            gymnasium, which provided me with a solid creative foundation and motivation to continue working within design. Creativity has always been a central part of my interests.
-          </p>
-        </div>
+            <p class="about-profile__text">
+              I am a multimediadesign student from Iceland with a strong interest in visual and creative design. Prior to this education, I studied digital fashion design through an online university course, as well as design and marketing in
+              gymnasium, which provided me with a solid creative foundation and motivation to continue working within design. Creativity has always been a central part of my interests.
+            </p>
+          </div>
 
-        <div class="about-profile__image">
-          <img src="imgs/abt.png" alt="Portrait of Agnieszka Kieltyka" />
+          <div class="about-profile__image">
+            <img src="imgs/abt.png" alt="Portrait of Agnieszka Kieltyka" />
+          </div>
         </div>
       </section>
 
