--- a/portfolio.html
+++ b/portfolio.html
@@ -35,9 +35,9 @@
       <!-- PORTFOLIO HERO -->
       <section class="portfolio-hero" aria-label="Portfolio hero">
         <div class="hero-strip portfolio-hero__strip">
-          <span class="star star--light">✶</span>
+          <img class="portfolio-hero__star portfolio-hero__star--left" src="imgs/star2.svg" alt="" aria-hidden="true" />
           <h1 class="portfolio-hero__title">PORTFOLIO</h1>
-          <span class="star star--light">✶</span>
+          <img class="portfolio-hero__star portfolio-hero__star--right" src="imgs/star2.svg" alt="" aria-hidden="true" />
         </div>
 
         <p class="portfolio-hero__intro">A selection of my first semester projects, including process, methods, and final solutions.</p>
