--- a/portfolio.html
+++ b/portfolio.html
@@ -35,12 +35,14 @@
       <!-- PORTFOLIO HERO -->
       <section class="portfolio-hero" aria-label="Portfolio hero">
         <div class="hero-strip portfolio-hero__strip">
-          <img class="portfolio-hero__star portfolio-hero__star--left" src="imgs/star2.svg" alt="" aria-hidden="true" />
-          <h1 class="portfolio-hero__title">PORTFOLIO</h1>
-          <img class="portfolio-hero__star portfolio-hero__star--right" src="imgs/star2.svg" alt="" aria-hidden="true" />
+          <div class="portfolio-hero__inner">
+            <img class="portfolio-hero__star" src="imgs/star2.svg" alt="" aria-hidden="true" />
+            <h1 class="portfolio-hero__title">PORTFOLIO</h1>
+            <img class="portfolio-hero__star" src="imgs/star2.svg" alt="" aria-hidden="true" />
+          </div>
         </div>
 
-        <p class="portfolio-hero__intro">A selection of my first semester projects, including process, methods, and final solutions.</p>
+        <p class="portfolio-hero__intro">A selection of my first semester projects</p>
       </section>
 
       <section class="portfolio-section" aria-label="Projects">
