--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </section>
     </main>
 
-    <script src="js/main.js"></script>
+    <script src="js/burger.js"></script>
     <footer class="site-footer">
       <p class="site-footer__name">Agnieszka Kieltyka</p>
       <p class="site-footer__contact">
