--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
               <h2 class="project-card__title">Project 01 – Mobilsite</h2>
               <p class="project-card__subtitle">Introductory mobile website focusing on basic HTML, CSS, and layout structure.</p>
 
-              <button class="btn btn--small project-open" type="button" data-project="0">VIEW PROJECT</button>
+              <button class="btn btn--primary btn--sm project-open" type="button" data-project="0">VIEW PROJECT</button>
             </div>
           </article>
 
@@ -71,7 +71,7 @@
               <h2 class="project-card__title">Project 02 – Emnesite</h2>
               <p class="project-card__subtitle">Independent website project covering research, prototyping and documentation.</p>
 
-              <button class="btn btn--small project-open" type="button" data-project="1">VIEW PROJECT</button>
+              <button class="btn btn--primary btn--sm project-open" type="button" data-project="1">VIEW PROJECT</button>
             </div>
           </article>
 
@@ -85,7 +85,7 @@
               <h2 class="project-card__title">Project 03 – Emergency site</h2>
               <p class="project-card__subtitle">Fictional emergency website using SVG graphics and visual communication.</p>
 
-              <button class="btn btn--small project-open" type="button" data-project="2">VIEW PROJECT</button>
+              <button class="btn btn--primary btn--sm project-open" type="button" data-project="2">VIEW PROJECT</button>
             </div>
           </article>
 
@@ -99,7 +99,7 @@
               <h2 class="project-card__title">Project 04 – Virksomhedsite</h2>
               <p class="project-card__subtitle">Group based redesign of an existing website.</p>
 
-              <button class="btn btn--small project-open" type="button" data-project="3">VIEW PROJECT</button>
+              <button class="btn btn--primary btn--sm project-open" type="button" data-project="3">VIEW PROJECT</button>
             </div>
           </article>
         </div>
@@ -140,6 +140,7 @@
       </p>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="js/burger.js"></script>
+    <script src="js/popup.js"></script>
   </body>
 </html>
