--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
       </section>
     </main>
 
-    <script src="js/main.js"></script>
+    <script src="js/burger.js"></script>
 
     <footer class="site-footer">
       <p class="site-footer__name">Agnieszka Kieltyka</p>
