--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
           <!-- Project 1 -->
           <article class="project-card">
             <div class="project-card__preview" aria-label="Project preview">
-              <img class="project-card__img" src="imgs/mobilsite-pre.png" alt="" />
+              <img class="project-card__img" src="imgs/Mobil1.png" alt="" />
             </div>
 
             <div class="project-card__content">
