--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
           <!-- Project 3 -->
           <article class="project-card">
             <div class="project-card__preview" aria-label="Project preview">
-              <img class="project-card__img" src="imgs/emnesite-pre.png" alt="" />
+              <img class="project-card__img" src="imgs/emrg.png" alt="" />
             </div>
 
             <div class="project-card__content">
@@ -90,7 +90,7 @@
           <!-- Project 4 -->
           <article class="project-card">
             <div class="project-card__preview" aria-label="Project preview">
-              <img class="project-card__img" src="imgs/emnesite-pre.png" alt="" />
+              <img class="project-card__img" src="imgs/rosesblm.png" alt="" />
             </div>
 
             <div class="project-card__content">
