--- a/about.html
+++ b/about.html
@@ -34,12 +34,12 @@
     <main class="page">
       <!-- ABOUT HERO -->
       <section class="about-hero" aria-label="About hero">
-        <img class="about-hero__bg" src="imgs/abhero.png" alt="" aria-hidden="true" />
+        <img class="about-hero__bg" src="imgs/abhero.png" alt="" aria-hidden="true" width="1920" height="1080" decoding="async" fetchpriority="high" />
 
         <div class="about-hero__strip" aria-hidden="true">
-          <img class="about-hero__star" src="imgs/star.svg" alt="" />
+          <img class="about-hero__star" src="imgs/star.svg" alt="" aria-hidden="true" width="56" height="56" />
           <h1 class="about-hero__title">ABOUT ME</h1>
-          <img class="about-hero__star" src="imgs/star.svg" alt="" />
+          <img class="about-hero__star" src="imgs/star.svg" alt="" aria-hidden="true" width="56" height="56" />
         </div>
       </section>
 
