about hero improvement

--- a/about.html
+++ b/about.html
@@ -7,12 +7,12 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Amarante&family=Anton&family=Bruno+Ace+SC&family=Inter:wght@400;500&family=Staatliches&family=Tiny5&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Amarante&family=Anton&family=Inter:wght@400;500&family=Staatliches&display=swap" rel="stylesheet" />
 
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/layout.css" />
-    <link rel="stylesheet" href="css/components.css" />
     <link rel="stylesheet" href="css/pages.css" />
+    <link rel="stylesheet" href="css/components.css" />
   </head>
 
   <body>
@@ -34,12 +34,10 @@
     <main class="page">
       <!-- ABOUT HERO -->
       <section class="about-hero" aria-label="About hero">
-        <img class="about-hero__bg" src="imgs/abhero.png" alt="" aria-hidden="true" width="1920" height="1080" decoding="async" fetchpriority="high" />
+        <img class="about-hero__bg" src="imgs/abhero.webp" alt="" aria-hidden="true" width="1920" height="1080" decoding="async" fetchpriority="high" />
 
         <div class="about-hero__strip" aria-hidden="true">
-          <img class="about-hero__star" src="imgs/star.svg" alt="" aria-hidden="true" width="56" height="56" />
           <h1 class="about-hero__title">ABOUT ME</h1>
-          <img class="about-hero__star" src="imgs/star.svg" alt="" aria-hidden="true" width="56" height="56" />
         </div>
       </section>
 
@@ -85,7 +83,7 @@
       </section>
     </main>
 
-    <script src="js/burger.js"></script>
+    <script src="js/burger.js" defer></script>
 
     <footer class="site-footer">
       <p class="site-footer__contact">
