--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/layout.css" />
-    <link rel="stylesheet" href="css/pages.css" />
+    <link rel="stylesheet" href="css/about.css" />
     <link rel="stylesheet" href="css/components.css" />
   </head>
 
