--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/components.css" />
-    <link rel="stylesheet" href="css/pages.css" />
+    <link rel="stylesheet" href="css/portfolio.css" />
   </head>
 
   <body>
