--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
           </div>
 
           <div class="about-profile__image">
-            <img src="imgs/abt.png" alt="Portrait of Agnieszka Kieltyka" />
+            <img src="imgs/abt.webp" alt="Portrait of Agnieszka Kieltyka" />
           </div>
         </div>
       </section>
