--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
           <!-- Project 1 -->
           <article class="project-card">
             <div class="project-card__preview" aria-label="Project preview">
-              <img class="project-card__img" src="imgs/Mobil1.png" alt="" />
+              <img class="project-card__img" src="imgs/Mobil1.webp" alt="" />
             </div>
 
             <div class="project-card__content">
@@ -62,7 +62,7 @@
           <!-- Project 2 -->
           <article class="project-card">
             <div class="project-card__preview" aria-label="Project preview">
-              <img class="project-card__img" src="imgs/emnesite-pre.png" alt="" />
+              <img class="project-card__img" src="imgs/emne1.webp" alt="" />
             </div>
 
             <div class="project-card__content">
@@ -76,7 +76,7 @@
           <!-- Project 3 -->
           <article class="project-card">
             <div class="project-card__preview" aria-label="Project preview">
-              <img class="project-card__img" src="imgs/emrg.png" alt="" />
+              <img class="project-card__img" src="imgs/emrg.webp" alt="" />
             </div>
 
             <div class="project-card__content">
@@ -90,7 +90,7 @@
           <!-- Project 4 -->
           <article class="project-card">
             <div class="project-card__preview" aria-label="Project preview">
-              <img class="project-card__img" src="imgs/rosesblm.png" alt="" />
+              <img class="project-card__img" src="imgs/rosesblm.webp" alt="" />
             </div>
 
             <div class="project-card__content">
