--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
 
             <div class="project-card__content">
               <h2 class="project-card__title">Project 02 – Emnesite</h2>
-              <p class="project-card__subtitle">Independent website project covering research, prototyping and documentation.</p>
+              <p class="project-card__subtitle">Independent website project covering research and prototyping.</p>
 
               <button class="btn btn--primary btn--sm project-open" type="button" data-project="1">VIEW PROJECT</button>
             </div>
@@ -95,7 +95,7 @@
 
             <div class="project-card__content">
               <h2 class="project-card__title">Project 04 – Virksomhedsite</h2>
-              <p class="project-card__subtitle">Group based redesign of an existing website.</p>
+              <p class="project-card__subtitle">Group project - redesigning an existing website for a Danish business.</p>
 
               <button class="btn btn--primary btn--sm project-open" type="button" data-project="3">VIEW PROJECT</button>
             </div>
